# casper-x402-poc

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Odra.toml  README.md  docker-compose.yml  justfile  x402_contract
contract/: Cargo.toml
contract/src/: cep18_x402.rs  errors.rs  events.rs  lib.rs
demo/: Cargo.toml
demo/src/: b64.rs  client.rs  config.rs  main.rs  resource_server.rs  types.rs  ui.rs
docker/: deployer-entrypoint.sh  facilitator-entrypoint.sh
facilitator/: Cargo.toml
facilitator/src/: main.rs  types.rs
facilitator/src/casper/: mod.rs  settler.rs
facilitator/src/routes/: mod.rs  settle.rs  supported.rs  verify.rs
wasm/: Cep18X402.wasm
x402-eip712/: Cargo.toml
x402-eip712/src/: lib.rs
x402-types/: Cargo.toml
x402-types/src/: lib.rs
