[package]
name = "cep18-x402"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { workspace = true }
odra-modules = { workspace = true }

[dev-dependencies]
odra-test = { workspace = true }

[build-dependencies]
odra-build = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { workspace = true }
odra-cli = { workspace = true }

[[bin]]
name = "cep18_x402_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "cep18_x402_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "cli"
path = "bin/cli.rs"
test = false