[package]
name = "cep18-x402"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { workspace = true }
odra-modules = { workspace = true }
hex = { version = "0.4", default-features = false }
casper-eip-712 = { workspace = true }
x402-eip712 = { path = "../x402-eip712"}
 
[dev-dependencies]
odra-test = { workspace = true }

[build-dependencies]
odra-build = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { workspace = true }
odra-cli = { workspace = true }
odra-casper-livenet-env = { workspace = true}

[[bin]]
name = "casper_x402_poc_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "casper_x402_poc_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "deployer"
path = "bin/deployer.rs"
test = false