[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
x402-types = { path = "../x402-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
casper-types = { version = "6.1", features = ["std", "std-fs-io"] }
hex = "0.4"
rand = "0.8"
anyhow = "1"
dotenv = "0.15"
